настроил проект к работе

--- a/article_project/source/webapp/templates/partial/articles_list_partial.html
+++ b/article_project/source/webapp/templates/partial/articles_list_partial.html
@@ -7,6 +7,7 @@
                     <h5 class="card-title">{{ article.title }}</h5>
                 </div>
                 <a href="{{ article.get_absolute_url }}" class="card-link btn btn-primary">Подробнее</a>
+                <button id="like" style="width: 100px; height: 75px; " >like</button>
             </div>
         </div>
     {% empty %}
