--- a/article_project/source/webapp/templates/articles/article_view.html
+++ b/article_project/source/webapp/templates/articles/article_view.html
@@ -27,6 +27,21 @@
             <h6 class="card-subtitle mb-2 text-muted">Автор: {{ article.author }}</h6>
             <p class="card-text">{{ article.content }}</p>
         </div>
+        <div id="container" style="display: flex;">
+            <p style="margin-right: auto" id="likes_p-{{ article.id }}" data-pk="{{ article.id }}">
+                Лайков: {{ article.user.all|length }} </p>
+            {% if request.user in article.user.all %}
+                <button id="like{{ forloop.counter }}" class="btn_like" data-pk="{{ article.id }}"
+                        style="width: 100px; height: 75px; ">dislike
+                </button>
+            {% endif %}
+            {% if request.user not in article.user.all %}
+                <button id="like{{ forloop.counter }}" class="btn_like" data-pk="{{ article.id }}"
+                        style="width: 100px; height: 75px; ">like
+                </button>
+            {% endif %}
+
+        </div>
     </div>
     <h3 class="my-3 text-center">Комментарии</h3>
     <div class="row">
@@ -39,17 +54,37 @@
                     <div class="btn-group w-100" role="group" aria-label="Basic mixed styles example">
                         <a class="btn btn-danger" href="{% url "webapp:update_comment" comment.pk %}">Изменить</a>
                         <a class="btn btn-warning" href="{% url "webapp:delete_comment" comment.pk %}">Удалить</a>
+
+
+                        {% if comments %}
+                            <div id="container" style="display: flex;">
+                                <p style="margin-right: auto" id="comment_p-{{ comment.id }}"
+                                   data-pk="{{ article.id }}">
+                                    Лайков: {{ article.user.all|length }} </p>
+                                {% if request.user in article.user.all %}
+                                    <button id="like{{ forloop.counter }}" class="btn_like" data-pk="{{ article.id }}"
+                                            style="width: 100px; height: 75px; ">dislike
+                                    </button>
+                                {% endif %}
+                                {% if request.user not in article.user.all %}
+                                    <button id="like{{ forloop.counter }}" class="btn_like" data-pk="{{ article.id }}"
+                                            style="width: 100px; height: 75px; ">like
+                                    </button>
+                                {% endif %}
+
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
-        {% empty %}
+            {% empty %}
             <p>Комментариев нет</p>
         {% endfor %}
     </div>
     <h3>Теги</h3>
     {% for tag in article.tags.all %}
         <p>{{ tag.name }}</p>
-    {% empty %}
+        {% empty %}
         <p>Тэгов нет</p>
     {% endfor %}
     <a href="{% url "webapp:index" %}">На главную</a>
@@ -75,4 +110,37 @@
             </div>
         </div>
     </div>
+    <script>
+
+
+        async function changeButton(id, event) {
+            console.log('target: ', event.target);
+            let pk = await event.target.dataset['pk'];
+            console.log(pk)
+
+            let response = await fetch(`http://localhost:8000/article/${pk}/like   `)
+            let data = await response.json()
+            console.log(data)
+            let likes = data['likes']
+            console.log(likes)
+            let likes_p = document.getElementById(`likes_p-${pk}`)
+            likes_p.innerText = 'Лайков: ' + likes
+            let button = await document.getElementById('like')
+            console.log('likes_p:' + button)
+
+            if (button.innerText === 'like') {
+                button.innerText = 'dislike'
+            } else if (button.innerText === 'dislike') {
+                button.innerText = 'like'
+            }
+
+        }
+
+
+        let button = document.getElementsByClassName('btn_like')
+        for (let i = 0; i < button.length; i++) {
+            button[i].addEventListener('click', () => changeButton(`like${(i + 1)}`, event))
+        }
+    </script>
+
 {% endblock %}
