--- a/article_project/source/webapp/templates/articles/article_view.html
+++ b/article_project/source/webapp/templates/articles/article_view.html
@@ -27,6 +27,7 @@
             <h6 class="card-subtitle mb-2 text-muted">Автор: {{ article.author }}</h6>
             <p class="card-text">{{ article.content }}</p>
         </div>
+{#    !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!#}
         <div id="container" style="display: flex;">
             <p style="margin-right: auto" id="likes_p-{{ article.id }}" data-pk="{{ article.id }}">
                 Лайков: {{ article.user.all|length }} </p>
@@ -42,6 +43,7 @@
             {% endif %}
 
         </div>
+{#    !!!!!!!!!!!!!!!!!!#}
     </div>
     <h3 class="my-3 text-center">Комментарии</h3>
     <div class="row">
@@ -59,15 +61,15 @@
                         {% if comments %}
                             <div id="container" style="display: flex;">
                                 <p style="margin-right: auto" id="comment_p-{{ comment.id }}"
-                                   data-pk="{{ article.id }}">
-                                    Лайков: {{ article.user.all|length }} </p>
-                                {% if request.user in article.user.all %}
-                                    <button id="like{{ forloop.counter }}" class="btn_like" data-pk="{{ article.id }}"
+                                   data-pk="{{ comment.id }}">
+                                    Лайков: {{ comment.user.all|length }} </p>
+                                {% if request.user in comment.user.all %}
+                                    <button id="like_com{{ forloop.counter }}" class="btn_like_com" data-pk="{{ comment.id }}"
                                             style="width: 100px; height: 75px; ">dislike
                                     </button>
                                 {% endif %}
-                                {% if request.user not in article.user.all %}
-                                    <button id="like{{ forloop.counter }}" class="btn_like" data-pk="{{ article.id }}"
+                                {% if request.user not in comment.user.all %}
+                                    <button id="like_com{{ forloop.counter }}" class="btn_like_com" data-pk="{{ comment.id }}"
                                             style="width: 100px; height: 75px; ">like
                                     </button>
                                 {% endif %}
@@ -112,13 +114,12 @@
     </div>
     <script>
 
-
         async function changeButton(id, event) {
             console.log('target: ', event.target);
             let pk = await event.target.dataset['pk'];
             console.log(pk)
 
-            let response = await fetch(`http://localhost:8000/article/${pk}/like   `)
+            let response = await fetch(`http://localhost:8000/articles/${pk}/like   `)
             let data = await response.json()
             console.log(data)
             let likes = data['likes']
@@ -126,7 +127,7 @@
             let likes_p = document.getElementById(`likes_p-${pk}`)
             likes_p.innerText = 'Лайков: ' + likes
             let button = await document.getElementById('like')
-            console.log('likes_p:' + button)
+
 
             if (button.innerText === 'like') {
                 button.innerText = 'dislike'
@@ -140,6 +141,38 @@
         let button = document.getElementsByClassName('btn_like')
         for (let i = 0; i < button.length; i++) {
             button[i].addEventListener('click', () => changeButton(`like${(i + 1)}`, event))
+        }
+{#    </script>#}
+{##}
+{#    <script>#}
+
+        async function changeButtonCom(id, event) {
+            console.log('target: ', event.target);
+            let pk = await event.target.dataset['pk'];
+            console.log('pk_com:'+pk)
+
+            let response = await fetch(`http://localhost:8000/comment/${pk}/like`)
+            let data = await response.json()
+            console.log(data)
+            let likes = data['likes']
+            console.log(likes)
+            let likes_p = document.getElementById(`comment_p-${pk}`)
+            likes_p.innerText = 'Лайков: ' + likes
+            let button = await document.getElementById(id)
+            console.log(button)
+
+            if (button.innerText === 'like') {
+                button.innerText = 'dislike'
+            } else if (button.innerText === 'dislike') {
+                button.innerText = 'like'
+            }
+
+        }
+
+
+        let button_com = document.getElementsByClassName('btn_like_com')
+        for (let i = 0; i < button_com.length; i++) {
+            button_com[i].addEventListener('click', () => changeButtonCom(`like_com${(i + 1)}`, event))
         }
     </script>
 
